@@ -1,4 +1,5 @@
 EBUILD cls-meta-10.4-r1.ebuild 2988 RMD160 042f931c6c1afa6103025275446336173aa70c10 SHA1 f830308a94db322d963c22a5100c8da049a31b44 SHA256 f763b6e9b07c0344b2baf7606944e4ec55d151adc5d85e354f37d5672b2aaa30
+EBUILD cls-meta-10.9-r1.ebuild 1451 RMD160 1169620362560a03489c0d742e5b9c0b8625ba27 SHA1 b8dcb24c80ff332d6c673ba3af48a895d272addd SHA256 106f389fd757bb52ba183d81d2b927d9a2d9f9bba78f26d567a8601078c9cc14
 EBUILD cls-meta-10.9.ebuild 1407 RMD160 d6b4a1b4ed9c2cd3419105e378f4f4efd224d521 SHA1 9c2cdb6d906c841ed5d8fdca9a3cd718737e8f5e SHA256 69ca743f4744a122c14ea4d58c6676d66189998eeac2a8ae4d8913e364c7bbfe
-MISC ChangeLog 2530 RMD160 b578fdd047a1a0897717320871df3ccc21b9ada0 SHA1 f7b9768d668eab81471fa9365db8a9c1ce8b0092 SHA256 bdf347d639a6919061991d4f9896409620f34bd1bbceda32210c9b14f98d86e5
+MISC ChangeLog 2700 RMD160 84f9c869560e50ccf44bf048b3eadad76812455b SHA1 89ca120602b3a912d2a75dac0607936f4e9ff8c5 SHA256 08b979e6f0b6d6c0443a2381d6c3f7efde7399dc6e7a66304b320c3b33b2cb15
 MISC metadata.xml 257 RMD160 ba1d3308ea944e3f4e2d6c968edfc6abbc32261e SHA1 557e2138324d0aa8db3a282eeeadc88f5b061408 SHA256 6e5c9e82d9d3bdd7855fde47d4d5edaec61251e84a271bd08e64f17008d3e07a
