@@ -5,14 +5,14 @@
 EAPI=2
 inherit calculate
 
-DESCRIPTION="Calculate Scratch Server (meta package)"
-HOMEPAGE="http://www.calculate-linux.org"
+DESCRIPTION="Calculate Linux Scratch (meta package)"
+HOMEPAGE="http://www.calculate-linux.org/main/en/cls"
 SRC_URI=""
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="x86 amd64"
-IUSE=""
+IUSE="printer wireless"
 
 RDEPEND="
 	!media-libs/svgalib
@@ -20,14 +20,39 @@ RDEPEND="
 
 RDEPEND="${RDEPEND}
 	app-misc/cl-base-meta
+	printer? (
+		app-misc/cl-printer-meta
+	)
+	app-misc/cl-useful-meta
+	wireless? (
+		app-misc/cl-wireless-meta
+	)
 "
 
-# Network
 RDEPEND="${RDEPEND}
-	net-misc/dhcp
+	app-misc/calculate-install-gui
+	media-fonts/dejavu
+	media-gfx/cls-themes
+	virtual/dhcpc
+	sys-apps/pcmciautils
+	sys-apps/usb_modeswitch
+	x11-base/xorg-x11
+	x11-terms/rxvt-unicode
+	x11-wm/openbox
 "
+
+cxxflags_present_in() {
+	grep CXXFLAGS $1 &>/dev/null
+	return $?
+}
+
+append_cxxflags_to() {
+	sed -i '$aCXXFLAGS="\${CFLAGS}"' $1
+}
+
 
 pkg_postinst() {
+	cxxflags_present_in /etc/make.conf || append_cxxflags_to /etc/make.conf
 	calculate_change_version
 
 	local calculatename=$( get_value calculate < ${CALCULATE_INI} )
@@ -36,7 +61,7 @@ pkg_postinst() {
 	# check version on stable (PV has only 2 digit)
 	if ! [[ "$PV" =~ ^[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+ ]]
 	then
-		[[ "$calculatename" == "CSS" ]] &&
+		[[ "$calculatename" == "CLS" ]] &&
 		[[ -n "$(eselect profile show |
 			grep calculate/${system}/${calculatename}/${ARCH}/developer)" ]] && 
 			eselect profile set calculate/${system}/${calculatename}/${ARCH}
