@@ -2,12 +2,6 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*css-meta-10.9-r1 (08 Nov 2010)
-
-  08 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
-  +css-meta-10.9-r1.ebuild:
-  Removed media-libs/svgalib
-
   13 Oct 2010; Трацевский Александр
   <atratsevskiy@gentoo.org> css-meta-10.9.ebuild:
   Removed app-misc/screen
