@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cls-meta-10.9-r1 (08 Nov 2010)
+
+  08 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cls-meta-10.9-r1.ebuild:
+  Removed media-libs/svgalib from desktops
+
   22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   cls-meta-10.9.ebuild:
   stable cls-meta-10.9.ebuild
